Fixing responsibility on mobile

--- a/public/css/categorycard.css
+++ b/public/css/categorycard.css
@@ -243,9 +243,18 @@
 
 @media(max-width: 700px) {
   .screen {
-    scale: 0.6;
+    scale: 1;
     margin-bottom: 0rem;
   }
+
+  .screen > .screen-content > .screen-user > .name {
+    font-size: 1.5rem;
+  }
+
+  .screen > .screen-content {
+    padding-bottom: 2rem;
+  }
+
 }
 
 /* -- Blob effect -- */
